src/ui/render/snapshots/rust_hf_downloader__ui__render__style_size_tests__style_hovered_pane_border_is_cyan.snap
---
source: src/ui/render.rs
expression: signature
---
y0: 0..99 fg=Cyan
y1: 0 fg=Cyan | 1..6 fg=DarkGray | 7..17 fg=White,mod=BOLD | 18..22 fg=Cyan | 23..37 fg=DarkGray | 38 fg=White | 39..43 fg=Cyan | 44..54 fg=DarkGray | 55 fg=White | 56..60 fg=Cyan | 61..72 fg=Green,mod=BOLD | 73..91 fg=Cyan | 92..98 fg=DarkGray | 99 fg=Cyan
y2: 0..99 fg=Cyan
y3: 0..99 fg=Yellow
y4: 0 fg=Yellow | 1..5 fg=DarkGray | 6..28 fg=Cyan,mod=BOLD | 33..42 fg=Green | 56..68 fg=Cyan | 69..93 fg=Yellow | 99 fg=Yellow
y5: 0 fg=Yellow | 1..5 fg=DarkGray | 6..30 fg=Cyan,mod=BOLD | 35..43 fg=Green | 58..75 fg=Yellow | 99 fg=Yellow
y6: 0 fg=Yellow | 1..5 fg=DarkGray | 6..36 fg=Cyan,mod=BOLD | 41..44 fg=Green | 57..69 fg=Cyan | 99 fg=Yellow
y7: 0 fg=Yellow | 99 fg=Yellow
y8: 0 fg=Yellow | 99 fg=Yellow
y9: 0 fg=Yellow | 99 fg=Yellow
y10: 0 fg=Yellow | 99 fg=Yellow
y11: 0 fg=Yellow | 99 fg=Yellow
y12: 0 fg=Yellow | 99 fg=Yellow
y13: 0..99 fg=Yellow
y14: 0..49 fg=Cyan
y15: 0 fg=Cyan | 1..15 bg=DarkGray,mod=BOLD | 16..30 fg=Cyan,bg=DarkGray,mod=BOLD | 31..40 fg=DarkGray,bg=DarkGray,mod=BOLD | 41..48 bg=DarkGray,mod=BOLD | 49 fg=Cyan | 51..65 bg=DarkGray,mod=BOLD | 66..89 fg=White,bg=DarkGray,mod=BOLD | 90..98 bg=DarkGray,mod=BOLD
y16: 0 fg=Cyan | 16..30 fg=Cyan,mod=BOLD | 49 fg=Cyan | 66..98 fg=White
y17: 0 fg=Cyan | 49 fg=Cyan
y18: 0 fg=Cyan | 49 fg=Cyan
y19: 0 fg=Cyan | 49 fg=Cyan
y20: 0 fg=Cyan | 49 fg=Cyan
y21: 0 fg=Cyan | 49 fg=Cyan
y22: 0 fg=Cyan | 49 fg=Cyan
y23: 0 fg=Cyan | 49 fg=Cyan
y24: 0 fg=Cyan | 49 fg=Cyan
y25: 0..49 fg=Cyan
